--- a/landingpage/tailwind/ homesmart/index.html
+++ b/landingpage/tailwind/ homesmart/index.html
@@ -660,6 +660,6 @@
         </form>
     </div>
 </section>
-<script src="https://cdn.tailwindcss.com"></script>
+<script src="../tailwindcss_3_2_6.js"></script>
 </body>
 </html>
