add digital marketing

--- a/elements/signinupform/index.html
+++ b/elements/signinupform/index.html
@@ -64,12 +64,11 @@
     <footer>
       <p>
         Created with <i class="fa fa-heart"></i> by
-        <a target="_blank" href="https://codeclasshoadv.netlify.app/">Blog Frontend</a>
+        <a target="_blank" href="https://codeclasshoadv.netlify.app/"
+          >Blog Frontend</a
+        >
         - Read how I created this and how you can join the challenge
-        <a
-          target="_blank"
-          href="https://github.com/vanhoa690/frontend"
-          >here</a
+        <a target="_blank" href="https://github.com/vanhoa690/frontend">here</a
         >.
       </p>
     </footer>
