--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       Sở thích: Học lập trình, code website, landingpage, học ngoại ngữ: tiếng
       anh, tiếng nhật
     </p>
-    <p>Gia đình: vợ và 2 con: Bé Cà (Nữ - 2000) + Bé Đậu (Nam)</p>
+    <p>Gia đình: vợ và 2 con: Bé Cà (Nữ - 2020) + Bé Đậu (Nam - 2023)</p>
     <p>
       Ước mơ định hướng: Dạy học lập trình cho thế hệ trẻ và truyển cảm hứng
       code website đẹp
@@ -33,5 +33,68 @@
     <a href="https://www.facebook.com/van.hoa.739/" target="_blank"
       ><b>Facebook Văn Hòa - Please Add Friend</b></a
     >
+    <h2>Bài tập 2: Giới thiệu thời khóa biểu trong ngày và list danh sách sở thích - không thích</h2>
+    <h3>B2.1 Thời khóa biểu</h3>
+    <table>
+      <tr>
+        <th>Thời gian</th>
+        <th>Thứ 2</th>
+        <th>Thứ 3</th>
+        <th>Thứ 4</th>
+        <th>Thứ 5</th>
+        <th>Thứ 6</th>
+        <th>Thứ 7</th>
+        <th>CN</th>
+      </tr>
+      <tr>
+        <td>Sáng</td>
+        <td>Học lập trình</td>
+        <td>Học tiếng anh</td>
+        <td>Học lập trình</td>
+        <td>Học tiếng anh</td>
+        <td>Học lập trình</td>
+        <td>Học tiếng anh</td>
+        <td>Học lập trình</td>
+      </tr>
+      <tr>
+        <td>Chiều</td>
+        <td>Học lập trình</td>
+        <td>Học tiếng anh</td>
+        <td>Học lập trình</td>
+        <td>Học tiếng anh</td>
+        <td>Học lập trình</td>
+        <td>Học tiếng anh</td>
+        <td>Học lập trình</td>
+      </tr>
+      <tr>
+        <td>Tối</td>
+        <td>Học lập trình</td>
+        <td>Học tiếng anh</td>
+        <td>Học lập trình</td>
+        <td>Học tiếng anh</td>
+        <td>Học lập trình</td>
+        <td>Học tiếng anh</td>
+        <td>Học lập trình</td>
+      </tr>
+    </table>
+    <h3>B2.2 List danh sách sở thích - không thích</h3>
+    <h4>Sở thích</h4>
+    <ol>
+      <li>Thích code website đẹp</li>
+      <li>Thích học lập trình</li>
+      <li>Thích học ngoại ngữ</li>
+      <li>Thích dạy học</li>
+      <li>Thích kết bạn 4 phương</li>
+      <li>Thích du lịch khắp Việt Nam</li>
+      ...
+    </ol>
+    <h4>Không thích</h4>
+    <ol>
+      <li>Không thích màu sặc sỡ</li>
+      <li>Không thích bị nói xấu</li>
+      <li>Không thích code có nhiều bug</li>
+      <li>Không thích nhìn website xấu</li>
+      ...
+    </ol>
   </body>
 </html>
